--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,6 @@ spring:
   application:
     name: libreria
   datasource:
-    # url: jdbc:h2:file:./data/libreria_db
     url: jdbc:h2:mem:libreria_db
     driver-class-name: org.h2.Driver
     username: sa
@@ -30,7 +29,7 @@ spring:
 external:
   api:
     books:
-      url: 
+      url: https://my-json-server.typicode.com/Gabriel-Arriola-UTN/libros/books
 
 server:
   port: 8080
